overflow fix

--- a/card.css
+++ b/card.css
@@ -12,6 +12,7 @@ body {
     min-height: 400px;
     background-color: #000000;
     border-radius: 20px;
+    overflow: hidden;
 }
 
 .left-section {
